--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -1,5 +1,6 @@
 [server]
-protocol = https
 http_port = 47474
-cert_file = /usr/local/bolt/ssl/bolt.crt
-cert_key = /usr/local/bolt/ssl/bolt.key
+cert_key = /etc/grafana/grafana.key
+cert_file = /etc/grafana/grafana.crt
+enforce_domain = False
+protocol = https
