--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Grafana",
   "version": "0.0.1",
-  "description": "Grafana plugin for AdminBolt",
+  "description": "Grafana app for AdminBolt",
   "author": "AdminBolt",
   "license": "MIT",
   "adminIndexUrl": "{{PANEL_DOMAIN}}:47474"
